# hyle

./: .gitignore  .gitmessage  AGENTS.md  AI_INSTRUCTIONS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md
backends/hyle-cpu/: Cargo.toml
backends/hyle-cpu/tests/: smoke.rs
crates/backends/hyle-cpu/: Cargo.toml
crates/backends/hyle-cpu/src/: access.rs  cpu.rs  lib.rs
crates/backends/hyle-cpu/tests/: smoke.rs
crates/backends/hyle-gpu/: Cargo.toml
crates/backends/hyle-gpu/src/: access.rs  gpu.rs  lib.rs
crates/backends/hyle-gpu/tests/: smoke.rs
crates/ca-analysis/: Cargo.toml  README.md
crates/ca-analysis/src/: diagnostic.rs  lib.rs
crates/ca-analysis/src/runtime/: analyze.rs  mod.rs  report.rs
crates/ca-analysis/src/spec/: analyze.rs  mod.rs  neighborhoods.rs  report.rs  rules.rs
crates/ca-analysis/tests/: runtime.rs  spec.rs
crates/ca-contracts/: Cargo.toml  README.md
crates/ca-contracts/src/: action.rs  backend.rs  cell.rs  lib.rs  prelude.rs  validated.rs
crates/ca-contracts/src/automaton/: builder.rs  mod.rs  spec.rs
crates/ca-contracts/src/descriptors/: mod.rs  neighborhood.rs
crates/ca-contracts/tests/: automaton.rs  backend.rs  cell_trait.rs
crates/ca-core/: Cargo.toml  README.md
crates/ca-core/src/: backend.rs  cell.rs  grid.rs  lib.rs  rng.rs  topology.rs  validated.rs
crates/ca-core/src/cell/: action.rs  direction.rs  grid.rs  mod.rs  neighborhood.rs  region.rs  rng.rs  traits.rs
crates/ca-core/src/descriptors/: neighborhood.rs  topology.rs
crates/ca-core/src/neighborhood/: buffer.rs  mod.rs  moore.rs  shapes.rs  spherical.rs  types.rs  von_neumann.rs  weights.rs
crates/ca-core/src/topology/: bounded.rs  index.rs  mod.rs  policy.rs  torus.rs
crates/ca-core/tests/: backend.rs  cell_trait.rs  neighborhood.rs  rng.rs  topology.rs
crates/ca-interface/: Cargo.toml  README.md
crates/ca-interface-derive/: Cargo.toml
crates/ca-interface-derive/src/: attribute_set.rs  common.rs  lib.rs  material_set.rs  neighborhood_set.rs
crates/ca-interface/src/: handles.rs  lib.rs  prelude.rs  rng.rs
crates/ca-interface/src/contracts/: cell.rs  mod.rs  symbols.rs
crates/ca-interface/src/contracts/automaton/: builder.rs  dsl.rs  mod.rs
crates/ca-interface/src/contracts/blueprint/: builder.rs  dsl.rs  mod.rs  spec.rs
crates/ca-interface/src/contracts/descriptors/: attribute.rs  grid.rs  material.rs  mod.rs  neighborhood.rs  topology.rs
crates/ca-interface/src/domain/: attribute.rs  grid.rs  mod.rs  neighborhood.rs
crates/ca-interface/src/models/: mod.rs  provider.rs
crates/ca-interface/src/models/solver/: ca_solver.rs  validated.rs
crates/ca-interface/src/resolved/: blueprint.rs  mod.rs  neighborhood.rs  random.rs  rng.rs  topology.rs
crates/ca-interface/src/runtime/: attribute_access.rs  ca_runtime.rs  cell.rs  mod.rs  provider.rs  solver.rs  step_metrics.rs  step_report.rs  topology.rs
crates/ca-interface/src/runtime/errors/: attribute_access.rs  mod.rs  (+2 more)
crates/ca-interface/src/schema/: builder.rs  dsl.rs  mod.rs  refs.rs  sets.rs  spec.rs
crates/ca-interface/src/semantics/: blueprint.rs  mod.rs  neighborhood.rs  random.rs  rng.rs  topology.rs
crates/ca-interface/src/solver/: ca_solver.rs  validated.rs
crates/ca-interface/src/topology/: mod.rs  policy.rs
crates/ca-interface/tests/: automaton.rs  cell_trait.rs  derive_sets.rs  rng.rs  semantics_neighborhood.rs  solver.rs
crates/ca-semantics/: Cargo.toml  README.md
crates/ca-semantics/src/: blueprint.rs  lib.rs  neighborhood.rs  offset.rs  topology.rs
crates/ca-semantics/tests/: neighborhood.rs
crates/ca-solver/: Cargo.toml  README.md
crates/ca-solver/src/: attributes.rs  grid.rs  lib.rs  program.rs  provider.rs  rule_set.rs  rules.rs  solver.rs  world.rs
crates/ca-solver/src/neighborhood/: buffer.rs  mod.rs  shapes.rs  types.rs  weights.rs
crates/ca-solver/src/topology/: bounded.rs  descriptor.rs  mod.rs  torus.rs
crates/ca-solver/tests/: contract.rs  neighborhood.rs  provider.rs  rng.rs  rule_set.rs  rules.rs  topology.rs  world_pass.rs
crates/hyle/: Cargo.toml
crates/hyle-compiler/: Cargo.toml
crates/hyle-compiler/src/: compile.rs  diagnostics.rs  lib.rs  lower.rs  resolve.rs  source.rs  typecheck.rs
crates/hyle-compiler/src/codegen/: mod.rs  sole_ir.rs
crates/hyle-compiler/src/config/: ast.rs  mod.rs  parse.rs
crates/hyle-compiler/src/dsl/: ast.rs  mod.rs  parse.rs
crates/hyle-compiler/src/ir/: ids.rs  lattice.rs  mod.rs  model.rs  module.rs  rule.rs  types.rs  validate.rs  version.rs
crates/hyle-compiler/src/semantics/: lower.rs  mod.rs
crates/hyle-compiler/src/syntax/: ast.rs  lexer.rs  mod.rs  parser.rs  token.rs
crates/hyle-compiler/tests/: compile.rs  config_parse.rs  ir_validation.rs  sole_ir.rs  syntax_parse.rs
crates/hyle-compiler/tests/common/: mod.rs
crates/hyle-ffi/hyle-compiler/: Cargo.toml
crates/hyle-ffi/hyle-compiler/src/: error.rs  raw.rs  types.rs
crates/hyle-ffi/hyle-compiler/tests/: ffi.rs
crates/hyle-runtime/: Cargo.toml
crates/hyle-runtime-ffi/: Cargo.toml
crates/hyle-runtime-ffi/src/: error.rs  lib.rs  types.rs
crates/hyle-runtime/src/: dispatch.rs  error.rs  fields.rs  instance.rs  io_handler.rs  lib.rs  module.rs  options.rs  solver.rs
crates/hyle-runtime/tests/: contracts.rs
crates/hyle-sole/: Cargo.toml
crates/hyle-sole/src/: codec.rs  expr.rs  lib.rs  model.rs  module.rs  rule.rs  value.rs  world.rs
crates/hyle-sole/tests/: sole_json.rs
crates/hyle/src/: compiler.rs  lib.rs  prelude.rs  runtime.rs  sole.rs
crates/tools/hyle-studio/: Cargo.toml  index.html
crates/tools/hyle-studio/src/: lib.rs  main.rs  viewer.rs
crates/tools/hyle-studio/tests/: smoke.rs
tools/viewer/: Cargo.toml
tools/viewer/src/: app.rs  camera.rs  gpu.rs  input.rs  main.rs  raycast.rs  raycast.wgsl  shade.rs  simulation.rs  tools.rs  ui.rs  viewport.rs  world.rs
tools/viewer/src/ca/: error.rs  mod.rs  scenario.rs  scenarios.rs  simulation.rs  world.rs
tools/viewer/src/input/: mod.rs  state.rs
tools/viewer/src/rendering/: camera.rs  gpu.rs  mod.rs  ui.rs  viewport.rs
(+155 files in other folders)
