[workspace]
members = [
    "crates/ca-analysis",
    "crates/ca-contracts",
    "crates/ca-solver",

    "tools/viewer",
]
default-members = [
    "crates/ca-analysis",
    "crates/ca-contracts",
    "crates/ca-solver",
]
resolver = "2"

[workspace.dependencies]
glam    = "0.29"
eframe  = { version = "0.33", default-features = false }
wgpu    = "27.0.1"
