[workspace]
members = [
    "crates/hyle-ir",
    "crates/hyle-compiler",
    "crates/hyle-runtime",
    "backends/hyle-cpu",
    "backends/hyle-gpu",
    "tools/hyle-viewer",
]
default-members = [
    "crates/hyle-ir",
    "crates/hyle-compiler",
    "crates/hyle-runtime",
    "backends/hyle-cpu",
    "backends/hyle-gpu",
    "tools/hyle-viewer",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/walkingtheplanck/hyle"
rust-version = "1.82"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
