[workspace]
members = [
    "crates/hyle",
    "crates/hyle-sole",
    "crates/hyle-compiler",
    "crates/hyle-ffi/hyle-compiler",
    "crates/hyle-runtime",
    "crates/backends/hyle-cpu",
    "crates/backends/hyle-gpu",
    "crates/tools/hyle-studio",
    "crates/hyle-ffi/hyle-runtime",
    "examples/quickstart",
]
default-members = [
    "crates/hyle",
    "crates/hyle-sole",
    "crates/hyle-compiler",
    "crates/hyle-runtime",
    "crates/backends/hyle-cpu",
    "crates/backends/hyle-gpu",
    "crates/tools/hyle-studio",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/walkingtheplanck/hyle"
rust-version = "1.82"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
