[package]
name = "hyle-ca-interface"
version = "0.2.0"
edition = "2021"
description = "Shared interfaces, schema types, and runtime traits for the Hyle cellular automaton framework."
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/walkingtheplanck/hyle"
documentation = "https://docs.rs/hyle-ca-interface"
keywords = ["cellular-automata", "voxel", "gamedev", "automaton"]
categories = ["game-development", "algorithms"]
exclude = ["tests/"]

[dependencies]
hyle-ca-interface-derive = { path = "../ca-interface-derive", version = "0.2.0" }
