[package]
name = "hyle-ca-semantics"
version = "0.1.0"
edition = "2021"
description = "Canonical semantic expansion helpers for the Hyle cellular automaton framework."
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/walkingtheplanck/hyle"
documentation = "https://docs.rs/hyle-ca-semantics"
keywords = ["cellular-automata", "semantics", "neighborhood", "automaton"]
categories = ["game-development", "algorithms"]
exclude = ["tests/"]

[dependencies]
hyle-ca-contracts = { path = "../ca-contracts", version = "0.1.0" }
