[package]
name = "hyle-ca-solver"
version = "0.1.0"
edition = "2021"
description = "Default solver for the Hyle cellular automaton framework."
readme = "README.md"
license = "GPL-3.0-only"
repository = "https://github.com/walkingtheplanck/hyle"
documentation = "https://docs.rs/hyle-ca-solver"
keywords = ["cellular-automata", "voxel", "gamedev", "automaton"]
categories = ["game-development", "algorithms"]
exclude = ["tests/"]

[dependencies]
hyle-ca-contracts = { path = "../ca-contracts", version = "0.1.0" }
hyle-ca-semantics = { path = "../ca-semantics", version = "0.1.0" }
