[package]
name = "hyle-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Compiler scaffold for Hyle config and DSL sources."

[dependencies]
hyle-ir = { path = "../hyle-ir" }
kdl = "6.5"
serde.workspace = true
