[package]
name = "hyle-compiler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Compiler for Hyle source scripts."

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
