[package]
name = "hyle-runtime-ffi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "C ABI surface for the Hyle runtime."
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
hyle-runtime = { path = "../hyle-runtime" }
