[package]
name = "hyle-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Runtime contracts shared by Hyle backends."

[dependencies]
hyle-ir = { path = "../hyle-ir" }
thiserror.workspace = true
