[package]
name = "hyle-sole"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Standalone .sole IR data model and JSON codec."

[dependencies]
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
hyle-compiler = { path = "../hyle-compiler" }
