[package]
name = "hyle-cpu"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Disposable CPU proof-of-concept backend for Hyle."
publish = false

[dependencies]
hyle-sole = { path = "../../hyle-sole" }
hyle-runtime = { package = "hyle-runtime", path = "../../hyle-runtime" }
