[package]
name = "hyle-studio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Official portable app for visualizing and testing Hyle scripts"
publish = false

[dependencies]
hyle-sole = { path = "../../hyle-sole" }
