[package]
name = "hyle-studio"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Official portable app for visualizing and testing Hyle scripts"
publish = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlCanvasElement"] }

[dependencies]
eframe = { version = "0.34.2", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
